--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       background-size: cover;
       font-family: 'Roboto Mono', monospace;
       height: 100%;
-      color: #e0e0e0;
+      color: darkslategrey;
       line-height: 1.6;
     }
     a {
