--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     body {
       background: url('./images/bg.jpg') no-repeat center center fixed;
       background-size: cover;
+      background-color: black;
       font-family: 'Roboto Mono', monospace;
       height: 100%;
-      color: darkslategrey;
+      color: #e0e0e0;
       line-height: 1.6;
     }
     a {
