--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     body {
       background: url('./images/bg.jpg') no-repeat center center fixed;
       background-size: cover;
-      background-color: darkgray;
+      background-color: #0e0e0f;
       font-family: 'Roboto Mono', monospace;
       height: 100%;
       color: #e0e0e0;
