--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <header>
     <div class="container">
       <h1>Sharon Burshtein</h1>
-      <p>DevOps Engineer | Cloud Practitioner | Software Engineer</p>
+      <p>DevOps Engineer | AWS Cloud Practitioner | Software Engineer</p>
       <nav>
         <a href="https://www.linkedin.com/in/sharon-burshtein-53146b187/" target="_blank"><img src="https://i.imgur.com/yRpa1dQ.png" alt="LinkedIn"/></a>
         <a href="https://github.com/sharon088" target="_blank"><img src="https://static-00.iconduck.com/assets.00/github-desktop-icon-256x256-rporzkkh.png" alt="GitHub"/></a>
