--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       box-sizing: border-box;
     }
     body {
-      background: url('./images/bg.jpg') no-repeat center center fixed;
       background-size: cover;
       background-color: #0e0e0f;
       font-family: 'Roboto Mono', monospace;
@@ -251,7 +250,7 @@
               <a href="https://snyk.io" target="_blank" rel="noreferrer"> <img src="https://cdnlogo.com/logos/s/52/snyk.svg" alt="snyk" width="40" height="40"/> </a>
               <a href="https://www.wireshark.org/" target="_blank" rel="noreferrer"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/Wireshark_icon_new.png/480px-Wireshark_icon_new.png" alt="wireshark" width="40" height="40"/> </a>
               <a href="https://slack.com" target="_blank" rel="noreferrer"> <img src="https://www.steel-eye.com/hubfs/Slack%20Logo.png" alt="slack" width="40" height="40"/> </a>
-              <a href="https://netflix.github.io/chaosmonkey/" target="_blank" rel="noreferrer"> <img src="https://media.licdn.com/dms/image/v2/C5612AQG3tvjyBHOGqw/article-inline_image-shrink_400_744/article-inline_image-shrink_400_744/0/1589904203932?e=1735171200&v=beta&t=L-qRQKycE-4OzBQaLV92BP9D48mmJB0X8tQR-Ium3Ls" alt="chaosMoneky" width="40" height="40"/> </a>
+              <a href="https://netflix.github.io/chaosmonkey/" target="_blank" rel="noreferrer"> <img src="https://netflix.github.io/chaosmonkey/logo.png" alt="chaosMoneky" width="40" height="40"/> </a>
               <a href="https://www.checkov.io/" target="_blank" rel="noreferrer"> <img src="https://miro.medium.com/v2/resize:fit:861/1*pCFbZ09LlUJpQdR21nnH0Q.png" alt="checkov" width="40" height="40"/> </a>
             </div>
           </div>
